JPS-6165: Fixed. Pencil icon is not centered
Former-commit-id: e74b9ab50bd991e261ece18c2cbcfb3b496b7cc9

--- a/components/avatar-editor/avatar-editor.scss
+++ b/components/avatar-editor/avatar-editor.scss
@@ -74,7 +74,7 @@
   visibility: hidden;
   position: absolute;
   left: 0;
-  top: 9px;
+  top: 10px;
   line-height: 14px;
   width: 100%;
 
